--- a/package.json
+++ b/package.json
@@ -4,21 +4,31 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "predev": "prisma generate && yarn codegen",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@graphql-codegen/cli": "^2.7.0",
+    "@graphql-yoga/node": "^2.12.0",
+    "@prisma/client": "^4.0.0",
+    "graphql": "^16.5.0",
     "next": "12.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.7.0",
+    "@graphql-codegen/typescript": "2.6.0",
+    "@graphql-codegen/typescript-resolvers": "^2.6.7",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.1",
+    "prisma": "^4.0.0",
     "typescript": "4.7.4"
   }
 }
