--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "predev": "prisma generate && yarn codegen",
+    "migrate:dev": "prisma migrate dev --name dev-migration",
     "build": "next build",
+    "postbuild": "yarn migrate:dev",
     "start": "next start",
     "lint": "next lint",
     "codegen": "graphql-codegen --config codegen.yml"
